<resources>
    <!--Splash Activity-->
    <string name="app_name">PowerHome</string>
    <string name="splash_footer">From MazAbdSoftware</string>
    <!--Login Activity-->
    <string name="login_toolbar_title">Login</string>
    <string name="login_title">Identify yourself</string>
    <string name="login_hint_email">E-mail</string>
    <string name="login_hint_pass">Password</string>
    <string name="login_new_user">New to PowerHome?</string>
    <string name="login_or">OR</string>
    <string name="btn_connect">LOGIN</string>
    <string name="btn_register">CREATE AN ACCOUNT</string>
    <string name="btn_forgot">FORGOT PASSWORD?</string>
    <string name="btn_social">Continue with Facebook</string>

    <string name="welcome_title">Resident List</string>
    <string name="floor_label">FLOOR</string>
    <string name="floor_rdc">GF</string>
    <string name="appliance_count_singular">%1$d appliance</string>
    <string name="appliance_count_plural">%1$d appliances</string>
    <string name="no_appliance">No appliance</string>
    <!--Dialog box-->
    <string name="dialog_area_format">📐 %1$.1f sqm</string>
    <string name="dialog_floor_format">📍 Floor: %1$d</string>
    <string name="dialog_floor_rdc">📍 Ground Floor</string>
    <string name="dialog_total_power_format">⚡ Total: %1$d W</string>
    <string name="dialog_list_title">Appliance details:</string>
    <string name="dialog_btn_close">Close</string>
    <string name="appliance_detail_format">%1$s (%2$d W)</string>
    <!--Devices-->
    <string name="device_fridge">Fridge</string>
    <string name="device_tv">Television</string>
    <string name="device_game_console">Game Console</string>
    <string name="device_coffee_machine">Coffee Machine</string>
    <string name="device_oven">Oven</string>
    <string name="device_lamp">Lamp</string>
    <string name="device_pc">Computer</string>
    <string name="device_microwave">Microwave</string>
    <string name="device_heater">Heater</string>
    <string name="device_washing_machine">Washing Machine</string>
    <string name="device_dishwasher">Dishwasher</string>
    <string name="device_vaccum">Vacuum</string>

    <string name="open">Open menu</string>
    <string name="close">Close menu</string>

    <!--Nav Menu-->
    <string name="menu_habitats">Housings</string>
    <string name="menu_my_habitat">My Housing</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_about">About</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_log_out">Log out</string>
    <string name="menu_profil">Profil</string>


    <!--Settings fragment-->
    <string name="setting_darkmode">Dark mode</string>
    <string name="setting_notification">Notifications push</string>
    <string name="setting_language">Application language</string>
    <string name="title_setting_frag">Settings</string>

    <string name="register_title">Create an account</string>
    <string name="register_hint_name">Full Name</string>
    <string name="register_hint_floor">Floor</string>
    <string name="register_hint_area">Area (sqm)</string>
    <string name="register_hint_pass_confirm">Confirm password</string>
    <string name="register_already_account">Already have an account? </string>

    <string name="notif_title">My Notifications 🔔</string>
    <string name="notif_master">Allow notifications</string>
    <string name="notif_alerts">Network alerts (Red)</string>
    <string name="notif_reservations">Reservation reminders</string>
    <string name="notif_ecocoins">New EcoCoins earned 💰</string>

    <string name="setting_account_title">Account and Data</string>
    <string name="setting_clear_cache">Clear application cache</string>
    <string name="setting_delete_account">Delete my account</string>
</resources>