<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_habitats"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/menu_habitats" />

    <item
        android:id="@+id/nav_my_habitat"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:title="@string/menu_my_habitat" />
    <item
        android:id="@+id/nav_notifications"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_notifications" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_settings" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@android:drawable/ic_media_next"
        android:title="@string/menu_log_out" />

</menu>